# nagi

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  demo-draft-card.html  nginx-secretary.conf  plans_1221.md  secretary-backend.service  secretary-frontend.service
backend/: .env.example  README.md  _debug_chat.py  _show_tasks.py  check_schema.py  create_mock_projects.py  main.py  migrate_meeting_agenda_nullable.py  package.json  pyproject.toml  secretary.db.bak_20260113_012319  test_agenda_fix.py
backend/app/: __init__.py
backend/app/agents/: issue_agent.py  phase_planner_agent.py  planner_agent.py  runtime_router.py  secretary_agent.py
backend/app/api/: __init__.py  achievements.py  agent_tasks.py  auth.py  captures.py  chat.py  deps.py  heartbeat.py  issues.py  meeting_agendas.py  meeting_sessions.py  memories.py  milestones.py  models.py  notifications.py  permissions.py  phases.py  project_achievements.py  projects.py  proposals.py  realtime.py  recurring_meetings.py  recurring_tasks.py  schedule_settings.py  schedule_snapshots.py  shared_achievements.py  tasks.py  today.py  users.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/interfaces/: __init__.py  achievement_repository.py  blocker_repository.py  chat_session_repository.py  checkin_repository.py  heartbeat_event_repository.py  heartbeat_settings_repository.py  issue_comment_repository.py  issue_repository.py  llm_provider.py  meeting_agenda_repository.py  meeting_session_repository.py  memory_repository.py  milestone_repository.py  notification_repository.py  (+16 more)
backend/docs/: AWS_TRANSCRIBE_SETUP.md  REGISTRATION_WHITELIST.md
backend/scripts/: backfill_order_in_parent.py  backfill_subtask_assignees.py  migrate_dev_tasks.py  seed_demo_data.py
backend/tests/: test_dependency_validator.py  test_recurring_task_service.py  test_recurring_tasks_api.py
(+458 files in other folders)
